--- a/style.css
+++ b/style.css
@@ -1,4 +1,23 @@
 #counter {
-    text-align:center; 
-    font-size: 100px;
+    text-align:center !important; 
+    font-size: 6vw;
+    opacity: 0.8;
+    transform: scale(4);
+    transition: all 0.3s ease-in-out 0.2s;
+}
+
+html {
+    height: 100%;
+}
+
+body {
+    height: 100%;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.container {
+    max-width: 100% !important;
+    width: 100% !important;
 }
